setting up Users in database

--- a/html-css-js/html/register.html
+++ b/html-css-js/html/register.html
@@ -25,12 +25,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Enter a Recipe</h1>
-    <input id="name" placeholder="name" />
-    <input id="ingredient" placeholder="ingredient" />
-    <input id="recipe" placeholder="recipe" />
+    <h1>Sign Up</h1>
+    <input id="name" type="email" placeholder="Enter Your Email" />
+    <input id="password" placeholder="password" />
     <button id="button">Submit</button>
   </body>
-  <script src="../js/home.js"></script>
+  <script src="../js/register.js"></script>
   
 </html>
