--- a/public/recipe.html
+++ b/public/recipe.html
@@ -9,6 +9,12 @@
       href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
     <link href="stylesheets/style.css" rel="stylesheet" />
   </head>
@@ -20,33 +26,24 @@
           <a class="navbar-brand" href="/logout">
             Logout
           </a>
-          <button class="navbar-brand" id="recipe">
-            Your Recipe
-          </button>
+          <a class="navbar-brand" href="/members">
+            member page
+          </a>
           <div class="col-md-6 col-md-offset-3">
-            <h2>Welcome <span class="member-name"></span></h2>
+            <h2><span class="member-name"></span></h2>
           </div>
         </div>
       </div>
     </nav>
     <div class="container">
-      <div class="row"></div>
+      <div class="row">
+        
+      </div>
     </div>
 
-    <h1>Enter a Recipe</h1>
-    <input id="name" placeholder="name" />
-    <input id="ingredient" placeholder="ingredient" />
-    <input id="detail" placeholder="recipe" />
-    <input
-      type="file"
-      class="HMargin row productInput"
-      onchange="previewFile()"
-    />
-    <br />
-    <img id="img" class="HMargin row productImg" height="150" alt="" />
-    <button id="button" class="HMargin productSubmit">Submit</button>
+    
 
-    <script src="./js/members.js"></script>
+    <script src="./js/recipe.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </body>
 </html>
