--- a/public/recipe.html
+++ b/public/recipe.html
@@ -8,7 +8,12 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"
     />
+    <link href="stylesheets/style.css" rel="stylesheet" />
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/recipe.js"></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -20,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link href="stylesheets/style.css" rel="stylesheet" />
+
   </head>
 
   <body>
@@ -39,6 +44,7 @@
         </div>
         <form class="form-inline my-2 my-lg-0">
           <input
+            id="food"
             class="form-control mr-sm-2"
             type="search"
             placeholder="Search"
@@ -54,7 +60,7 @@
       <div class="row"></div>
     </div>
 
-    <script src="./js/recipe.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+
   </body>
 </html>
